--- a/eProject/KarnelTravel/Views/Shared/_UserLayout.cshtml
+++ b/eProject/KarnelTravel/Views/Shared/_UserLayout.cshtml
@@ -7,7 +7,7 @@
     <meta name="description" content="TRABBLE - Tour, Travel, Travel Agency Template">
     <meta name="keywords" content="Tour, Travel, Travel Agency Template">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KarnelTravel</title>
+    <title>Karnel - Travels</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <!-- Favicon -->
