--- a/eProject/KarnelTravel/Areas/Management/Views/Shared/_AdministratorLayout.cshtml
+++ b/eProject/KarnelTravel/Areas/Management/Views/Shared/_AdministratorLayout.cshtml
@@ -51,7 +51,7 @@
             </div>
 
             <!--logo start-->
-            <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+            <a href="@Url.Action("Index","Page")" class="logo">Karnel <span class="lite">Travel</span></a>
             <!--logo end-->
 
             <div class="nav search-row" id="top_menu">
@@ -320,11 +320,11 @@
                     <li class="sub-menu">
                         <a href="javascript:;" class="">
                             <i class="icon_document_alt"></i>
-                            <span>Forms</span>
+                            <span>Touris Spot</span>
                             <span class="menu-arrow arrow_carrot-right"></span>
                         </a>
                         <ul class="sub">
-                            <li><a class="" href="#">Form Elements</a></li>
+                            <li><a class="" href="@Url.Action("Index","Vehicles")">Vehicle</a></li>
                             <li><a class="" href="#">Form Validation</a></li>
                         </ul>
                     </li>
@@ -500,6 +500,35 @@
     <script src="~/Content/Admin/js/sparklines.js"></script>
     <script src="~/Content/Admin/js/charts.js"></script>
     <script src="~/Content/Admin/js/jquery.slimscroll.min.js"></script>
+    <!-- Datatable-->
+    <script src="~/Content/Admin/DataTables/datatables.min.js"></script>
+    <link href="~/Content/Admin/DataTables/datatables.min.css" rel="stylesheet" />
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#tablefillset').DataTable(
+                {
+                    "language": {
+                        "infoEmpty": "Data null",
+                        "emptyTable": "Null Data",
+                        "processing": "Access...",
+                        "search": "Search:",
+                        "loadingRecords": "load...",
+                        "zeroRecords": "Data cannot find",
+                        "paginate": {
+                            "first": "|<",
+                            "last": ">|",
+                            "next": ">>",
+                            "previous": "<<"
+                        }
+                    },
+                    "lengthMenu": [[5, 10, 15, 20, 25, 30, -1], [5, 10, 15, 20, 25, 30, "All"]]
+                }
+
+            );
+
+
+        });
+    </script>
     <script>
         //knob
         $(function () {
