--- a/eProject/KarnelTravel/Areas/Management/Views/Page/Index.cshtml
+++ b/eProject/KarnelTravel/Areas/Management/Views/Page/Index.cshtml
@@ -11,9 +11,9 @@
             <div class="panel-heading">
                 <h2><i class="fa fa-map-marker red"></i><strong>Countries</strong></h2>
                 <div class="panel-actions">
-                    <a href="index.html#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
-                    <a href="index.html#" class="btn-minimize"><i class="fa fa-chevron-up"></i></a>
-                    <a href="index.html#" class="btn-close"><i class="fa fa-times"></i></a>
+                    <a href="#" class="btn-setting"><i class="fa fa-rotate-right"></i></a>
+                    <a href="#" class="btn-minimize"><i class="fa fa-chevron-up"></i></a>
+                    <a href="#" class="btn-close"><i class="fa fa-times"></i></a>
                 </div>
             </div>
             <div class="panel-body-map">
