--- a/eProject/KarnelTravel/Areas/Management/Views/Vehicles/Create.cshtml
+++ b/eProject/KarnelTravel/Areas/Management/Views/Vehicles/Create.cshtml
@@ -5,13 +5,14 @@
     Layout = "~/Areas/Management/Views/Shared/_AdministratorLayout.cshtml";
 }
 
-<h2>Create</h2>
+<h2 class=" text-center">Create</h2>
+<div><a href="@Url.Action("Index", "Vehicles")" class="btn btn-info">Manage</a></div>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Vehicle</h4>
         <hr />
@@ -66,15 +67,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-info" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
