--- a/eProject/KarnelTravel/Areas/Management/Views/Vehicles/Edit.cshtml
+++ b/eProject/KarnelTravel/Areas/Management/Views/Vehicles/Edit.cshtml
@@ -5,15 +5,16 @@
     Layout = "~/Areas/Management/Views/Shared/_AdministratorLayout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2 class="text-center"> Edit Vihicles</h2>
+<div><a href="@Url.Action("Index", "Vehicles")" class="btn btn-info">Manage</a></div>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Vehicle</h4>
+        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Vehicle_Id)
@@ -60,15 +61,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Update" class="btn btn-info" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
