--- a/eProject/KarnelTravel/Areas/Management/Views/Rooms/Delete.cshtml
+++ b/eProject/KarnelTravel/Areas/Management/Views/Rooms/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
     Layout = "~/Areas/Management/Views/Shared/_AdministratorLayout.cshtml";
 
-<h2>Delete</h2>
+
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Room</h4>
+
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -61,12 +61,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a href="@Url.Action("Index", "Rooms")" class="btn btn-info">Manage</a>
         </div>
     }
 </div>
