--- a/eProject/KarnelTravel/Areas/Management/Views/Rooms/Edit.cshtml
+++ b/eProject/KarnelTravel/Areas/Management/Views/Rooms/Edit.cshtml
@@ -5,14 +5,15 @@
     Layout = "~/Areas/Management/Views/Shared/_AdministratorLayout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2 class="text-center"> Edit Rooms</h2>
+<div><a href="@Url.Action("Index", "Rooms")" class="btn btn-info">Manage</a></div>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Room</h4>
+       
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Room_Id)
@@ -67,12 +68,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Update" class="btn btn-info" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
