--- a/eProject/KarnelTravel/Areas/Management/Views/Rooms/Index.cshtml
+++ b/eProject/KarnelTravel/Areas/Management/Views/Rooms/Index.cshtml
@@ -5,60 +5,89 @@
     Layout = "~/Areas/Management/Views/Shared/_AdministratorLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2 class="text-center">Rooms</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <a href="@Url.Action("Create", "Rooms")" class="btn btn-info">
+        Create
+    </a>
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Room_Type)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Room_Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Room_Start)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Room_Stop)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Room_Cost)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Hotel.Hotel_Name)
-        </th>
-        <th></th>
-    </tr>
+<table class="table table-striped table-bordered" id="tablefillset">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Room_Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Room_Type)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Room_Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Room_Start)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Room_Stop)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Room_Cost)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Hotel.Hotel_Name)
+            </th>
+            <th></th>
+        </tr>
+        </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Room_Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Room_Type)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Room_Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Room_Start)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Room_Stop)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Room_Cost)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Hotel.Hotel_Name)
+                </td>
+                <td>
+                    <a href="@Url.Action("UploadRooms", "Rooms", new { id = item.Room_Id })" class="btn btn-info">
+                        <i class="fa fa-image"></i>
+                        <span>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Room_Type)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Room_Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Room_Start)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Room_Stop)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Room_Cost)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Hotel.Hotel_Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Room_Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Room_Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Room_Id })
-        </td>
-    </tr>
-}
+                        </span>
+                    </a>
+                    |
+                    <a href="@Url.Action("Edit", "Rooms", new { id = item.Room_Id})" class="btn btn-success">
+                        <i class="fa fa-pencil"></i>
+                        <span>
 
+                        </span>
+                    </a>
+                    |
+
+                    <a href="@Url.Action("Delete", "Rooms", new { id = item.Room_Id })" class="btn btn-danger">
+                        <i class="fa fa-trash-o"></i>
+                        <span>
+
+                        </span>
+                    </a>
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
