--- a/eProject/KarnelTravel/Areas/Management/Views/Transportations/Create.cshtml
+++ b/eProject/KarnelTravel/Areas/Management/Views/Transportations/Create.cshtml
@@ -5,14 +5,15 @@
     Layout = "~/Areas/Management/Views/Shared/_AdministratorLayout.cshtml";
 }
 
-<h2>Create</h2>
+<h2 class=" text-center">Create</h2>
+<div><a href="@Url.Action("Index", "Transportations")" class="btn btn-info">Manage</a></div>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Transportation</h4>
+      
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -63,6 +64,3 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
