--- a/eProject/KarnelTravel/Areas/Management/Views/Transportations/Edit.cshtml
+++ b/eProject/KarnelTravel/Areas/Management/Views/Transportations/Edit.cshtml
@@ -5,12 +5,14 @@
     Layout = "~/Areas/Management/Views/Shared/_AdministratorLayout.cshtml";
 }
 
-<h2>Edit</h2>
+
+<h2 class="text-center"> Edit Transportations</h2>
+<div><a href="@Url.Action("Index", "Transportations")" class="btn btn-info">Manage</a></div>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Transportation</h4>
         <hr />
@@ -51,12 +53,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-info" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
